<resources>
    <string name="app_name">Home work for lesson one</string>
    <string name="top_text">Cравним, как много у вас общих интересов</string>
    <string name="first_name">Имя первого человека</string>
    <string name="interests">Выберите ваши увлечения</string>
    <string name="travel">Путешествие</string>
    <string name="cinema">Кино</string>
    <string name="creation">Творчество</string>
    <string name="extrim">Экстрим</string>
    <string name="sport">Спорт</string>
    <string name="programming">Программирование</string>
    <string name="are_you_trust">Доверяете ли вы человеку этому человеку на 100%?</string>
    <string name="not_ready">Не готов</string>
    <string name="ready">Готов</string>
    <string name="second_name">Имя второго человека</string>
    <string name="are_you_ready">Вы готовы к сравнению?</string>
    <string name="compare">Сравнить</string>
    <string name="notReady">Кто то еще не готов</string>
    <string name="forget_name">Кто то забыл ввести имя</string>
    <string name="absolutlyTrust">Вы полностью доверяете друг другу</string>
    <string name="notTrust">Вы совсем не доверяете друг другу</string>
    <string name="littleTrust">Ваше доверие, может быть лучше</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="divided">/</string>
    <string name="equally">=</string>
    <string name="times">*</string>
    <string name="c">C</string>
    <string name="delete">←</string>
    <string name="mPlus">M+</string>

    <string name="my_cool_style">My cool style</string>
    <string name="material_light">Material light</string>
    <string name="material_light_action_bar_dark">Material light action bar dark</string>
    <string name="material_dark">Material dark</string>

</resources>