<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/fonforcalculator3"
    android:padding="@dimen/layoutPadding"
    tools:context=".CalculatorLayout">

    <TextView
        android:id="@+id/forNumbers"
        style="@style/textViewStyle"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        style="@style/buttonStyls"
        android:text="@string/_1"
        app:layout_constraintEnd_toEndOf="@id/button4"
        app:layout_constraintStart_toStartOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button4" />


    <Button
        android:id="@+id/button2"
        style="@style/buttonStyls"
        android:text="@string/_2"
        app:layout_constraintEnd_toEndOf="@id/button5"
        app:layout_constraintStart_toStartOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button5" />


    <Button
        android:id="@+id/button3"
        style="@style/buttonStyls"
        android:text="@string/_3"
        android:textSize="@dimen/numbresSize"
        app:layout_constraintEnd_toEndOf="@id/button6"
        app:layout_constraintStart_toStartOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/button6" />

    <Button
        android:id="@+id/button4"
        style="@style/buttonStyls"
        android:text="@string/_4"
        app:layout_constraintEnd_toEndOf="@id/button7"
        app:layout_constraintStart_toStartOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/button7" />


    <Button
        android:id="@+id/button5"
        style="@style/buttonStyls"
        android:text="@string/_5"
        app:layout_constraintEnd_toEndOf="@id/button8"
        app:layout_constraintStart_toStartOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/button8" />

    <Button
        android:id="@+id/button6"
        style="@style/buttonStyls"
        android:text="@string/_6"
        app:layout_constraintEnd_toEndOf="@id/button9"
        app:layout_constraintStart_toStartOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/button9" />

    <Button
        android:id="@+id/button7"
        style="@style/buttonStyls"
        android:layout_marginTop="@dimen/margin20dp"
        android:text="@string/_7"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forNumbers" />

    <Button
        android:id="@+id/button8"
        style="@style/buttonStyls"
        android:layout_marginLeft="@dimen/marginBetween"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toTopOf="@id/button7" />

    <Button
        android:id="@+id/button9"
        style="@style/buttonStyls"
        android:layout_marginLeft="@dimen/marginBetween"
        android:text="@string/_9"
        app:layout_constraintEnd_toStartOf="@id/mPlus"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toTopOf="@id/button8" />

    <Button
        android:id="@+id/button0"
        style="@style/buttonStyls"
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="@id/button3"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <Button
        android:id="@+id/buttonPoint"
        style="@style/buttonStyls"
        android:backgroundTint="@color/otherButtonColors"
        android:text="@string/point"
        app:layout_constraintEnd_toEndOf="@id/button2"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button0" />


    <Button
        android:id="@+id/buttonMinus"
        style="@style/buttonStyls"
        android:backgroundTint="@color/otherButtonColors"
        android:text="@string/minus"
        app:layout_constraintEnd_toEndOf="@id/buttonTimes"
        app:layout_constraintStart_toStartOf="@id/buttonTimes"
        app:layout_constraintTop_toBottomOf="@id/buttonTimes" />


    <Button
        android:id="@+id/buttonPlus"
        style="@style/buttonStyls"
        android:backgroundTint="@color/otherButtonColors"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="@id/buttonMinus"
        app:layout_constraintStart_toStartOf="@id/buttonMinus"
        app:layout_constraintTop_toTopOf="@id/c" />


    <Button
        android:id="@+id/buttonDivided"
        style="@style/buttonStyls"
        android:layout_marginStart="@dimen/marginBetween"
        android:backgroundTint="@color/otherButtonColors"
        android:text="@string/divided"
        app:layout_constraintEnd_toEndOf="@id/mPlus"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toTopOf="@id/button6" />


    <Button
        android:id="@+id/buttonTimes"
        style="@style/buttonStyls"
        android:backgroundTint="@color/otherButtonColors"
        android:text="@string/times"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/buttonDivided"
        app:layout_constraintTop_toTopOf="@id/button3" />


    <Button
        android:id="@+id/equally"
        style="@style/buttonStyls"
        android:backgroundTint="@color/otherButtonColors"
        android:text="@string/equally"
        app:layout_constraintEnd_toEndOf="@id/button3"
        app:layout_constraintStart_toStartOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/button0" />


    <Button
        android:id="@+id/c"
        style="@style/buttonStyls"
        android:backgroundTint="@color/otherButtonColors"
        android:text="@string/c"
        app:layout_constraintEnd_toEndOf="@id/button1"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/delete" />


    <Button
        android:id="@+id/delete"
        style="@style/buttonStyls"
        android:backgroundTint="@color/otherButtonColors"
        android:text="@string/delete"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/button1"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button1" />


    <Button
        android:id="@+id/mPlus"
        style="@style/buttonStyls"
        android:layout_marginStart="@dimen/marginBetween"
        android:backgroundTint="@color/otherButtonColors"
        android:text="@string/mPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toTopOf="@id/button9" />


</androidx.constraintlayout.widget.ConstraintLayout>